--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,10 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  .map-container p {
+    color: black;
+  }
+
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
